deploy/aim/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: aim
  namespace: aim
spec:
  to:
    kind: Service
    name: aim
    weight: 100
  port:
    targetPort: 43800-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
